@@ -288,6 +288,10 @@ variable "zone" {
   type = string
 }
 
+output "cluster_name" {
+  value = var.cluster_name
+}
+
 output "controller_network_ips" {
   value = module.slurm_cluster_controller.instance_network_ips
 }
